<resources>
    <string name="app_name">LotusMeditation</string>
    <string name="guidedButton">Guided Meditation</string>
    <string name="soloButton">Solo Meditation</string>
    <string name="meditate">Meditate</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="prompt_repassword">Retype password</string>
    <string name="lotus_med">Lotus Meditation</string>
    <string name="register">Register</string>
    <string name="if_account">If you already have an account:</string>
    <string name="login_head">Login to your account</string>
    <string name="calendar">Calendar</string>
    <string name="streak">Streak</string>
    <string name="total_days">Total days</string>
</resources>